@@ -3,6 +3,7 @@
 	* sysdeps/unix/sysv/linux/alpha/bits/mman.h: Define PROT_GROWSDOWN
 	and PROT_GROWSUP.
 	* sysdeps/unix/sysv/linux/arm/bits/mman.h: Likewise.
+	* sysdeps/unix/sysv/linux/cris/bits/mman.h: Likewise.
 	* sysdeps/unix/sysv/linux/hppa/bits/mman.h: Likewise.
 	* sysdeps/unix/sysv/linux/i386/bits/mman.h: Likewise.
 	* sysdeps/unix/sysv/linux/ia64/bits/mman.h: Likewise.
@@ -11,6 +12,7 @@
 	* sysdeps/unix/sysv/linux/s390/bits/mman.h: Likewise.
 	* sysdeps/unix/sysv/linux/sh/bits/mman.h: Likewise.
 	* sysdeps/unix/sysv/linux/sparc/bits/mman.h: Likewise.
+	* sysdeps/unix/sysv/linux/x86_64/bits/mman.h: Likewise.
 
 2003-09-25  Jakub Jelinek  <jakub@redhat.com>
 
